RESOLVED FIXED283415
[OpenXR] Suppress unsafe-buffer-usage warnings
https://bugs.webkit.org/show_bug.cgi?id=283415
Summary [OpenXR] Suppress unsafe-buffer-usage warnings
Claudio Saavedra
Reported 2024-11-20 06:53:26 PST
.
Attachments
Claudio Saavedra
Comment 1 2024-11-20 06:53:58 PST
EWS
Comment 2 2024-11-20 07:36:15 PST
Committed 286857@main (d2178342d085): <https://commits.webkit.org/286857@main> Reviewed commits have been landed. Closing PR #36894 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.