[OpenXR] Suppress unsafe-buffer-usage warnings https://bugs.webkit.org/show_bug.cgi?id=283415

Reviewed by Adrian Perez de Castro.

* Source/WebCore/platform/xr/openxr/OpenXRInputSource.cpp:
(PlatformXR::OpenXRInputSource::suggestBindings const):
(PlatformXR::OpenXRInputSource::updateInteractionProfile):

Canonical link: https://commits.webkit.org/286857@main