Source/WebCore/platform/xr/openxr/OpenXRInputSource.cpp
@@ -108,7 +108,9 @@ XrResult OpenXRInputSource::suggestBindings(SuggestedBindings& bindings) const
         RETURN_RESULT_IF_FAILED(createBinding(profile.path, m_pointerAction, makeString(m_subactionPathName, OPENXR_INPUT_AIM_PATH), bindings), m_instance);
 
         // Suggest binding for button actions.
+        WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN // WPE port
         const OpenXRButton* buttons;
+        WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
         size_t buttonsSize;
         if (m_handeness == XRHandedness::Left) {
             buttons = profile.leftButtons;
@@ -137,7 +139,9 @@ XrResult OpenXRInputSource::suggestBindings(SuggestedBindings& bindings) const
 
         // Suggest binding for axis actions.
         for (size_t i = 0; i < profile.axesSize; ++i) {
+            WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN // WPE port
             const auto& axis = profile.axes[i];
+            WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
             auto action = m_axisActions.get(axis.type);
             ASSERT(action != XR_NULL_HANDLE);
             RETURN_RESULT_IF_FAILED(createBinding(profile.path, action, makeString(m_subactionPathName, span(axis.path)), bindings), m_instance);
@@ -221,9 +225,11 @@ XrResult OpenXRInputSource::updateInteractionProfile()
     m_profiles.clear();
     for (auto& profile : openXRInputProfiles) {
         if (!strncmp(profile.path, buffer, writtenCount)) {
+            WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN // WPE port
             for (size_t i = 0; i < profile.profileIdsSize; ++i)
                 m_profiles.append(String::fromUTF8(profile.profileIds[i]));
             break;
+            WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
         }
     }
 
